--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "npx nodemon src/app.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.16.4"
   }
 }
