--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dev": "npx nodemon src/app.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.4"
+    "mongoose": "^8.16.4",
+    "validator": "^13.15.15"
   }
 }
